updated faq scroll

--- a/index.html
+++ b/index.html
@@ -851,10 +851,10 @@
 
     </section><!-- /Team Section -->
 
-    <!-- Faq Section -->
+     <!-- Faq Section -->
     <section id="faq" class="faq section">
 
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
+      <div class="container" data-aos="fade-down" data-aos-delay="100">
 
         <div class="row justify-content-center">
           <div class="col-lg-10">
@@ -866,7 +866,7 @@
                   <div class="faq-icon">
                     <i class="bi bi-question-circle"></i>
                   </div>
-                  <h4>Mauris blandit aliquet elit, eget tincidunt nibh pulvinar?</h4>
+                  <h4>¿Qué es DAIA y cómo puede ayudar a mi negocio?</h4>
                   <div class="faq-toggle">
                     <i class="bi bi-plus"></i>
                     <i class="bi bi-dash"></i>
@@ -874,7 +874,7 @@
                 </div>
                 <div class="faq-content">
                   <div class="content-inner">
-                    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.</p>
+                    <p>Daia es una agencia especializada en soluciones de inteligencia artificial y automatización para empresas. Ayudamos a optimizar operaciones, mejorar la atención al cliente y aumentar la eficiencia a través de tecnologías avanzadas. Nuestros nuevos servicios, también ofrecemos configuración de citas y cierre de ventas. Estos servicios ayudan a optimizar las operaciones, mejorar la atención al cliente y aumentar las ventas.</p>
                   </div>
                 </div>
               </div><!-- End FAQ Item -->
@@ -884,7 +884,7 @@
                   <div class="faq-icon">
                     <i class="bi bi-question-circle"></i>
                   </div>
-                  <h4>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem?</h4>
+                  <h4>¿Cómo puede DAIA ayudarme a incrementar mis ventas?</h4>
                   <div class="faq-toggle">
                     <i class="bi bi-plus"></i>
                     <i class="bi bi-dash"></i>
@@ -892,7 +892,7 @@
                 </div>
                 <div class="faq-content">
                   <div class="content-inner">
-                    <p>Donec rutrum congue leo eget malesuada. Sed porttitor lectus nibh. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Proin eget tortor risus. Curabitur aliquet quam id dui posuere blandit.</p>
+                    <p>Con nuestros servicios de Appointment Setter, programamos citas estratégicas para tu equipo de ventas y utilizando Sales Closer, cerramos acuerdos de ventas, permitiéndote enfocarte en lo que mejor haces: hacer crecer tu negocio.</p>
                   </div>
                 </div>
               </div><!-- End FAQ Item -->
@@ -902,7 +902,7 @@
                   <div class="faq-icon">
                     <i class="bi bi-question-circle"></i>
                   </div>
-                  <h4>Vestibulum ante ipsum primis in faucibus orci luctus?</h4>
+                  <h4>¿Qué tipo de empresas se benefician más de los servicios de DAIA?</h4>
                   <div class="faq-toggle">
                     <i class="bi bi-plus"></i>
                     <i class="bi bi-dash"></i>
@@ -910,7 +910,7 @@
                 </div>
                 <div class="faq-content">
                   <div class="content-inner">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
+                    <p>Daia es adecuada para diversas industrias, desde startups hasta grandes corporaciones, que deseen mejorar su productividad, eficiencia y ventas. Nuestras soluciones son adaptables y escalables para adaptarse a cualquier empresa.</p>
                   </div>
                 </div>
               </div><!-- End FAQ Item -->
@@ -920,7 +920,7 @@
                   <div class="faq-icon">
                     <i class="bi bi-question-circle"></i>
                   </div>
-                  <h4>Nulla facilisi morbi tempus iaculis urna id volutpat?</h4>
+                  <h4>¿Cómo funcionan las consultas gratuitas de DAIA?</h4>
                   <div class="faq-toggle">
                     <i class="bi bi-plus"></i>
                     <i class="bi bi-dash"></i>
@@ -928,7 +928,7 @@
                 </div>
                 <div class="faq-content">
                   <div class="content-inner">
-                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium. Totam rem aperiam, eaque ipsa quae ab illo inventore veritatis.</p>
+                    <p>Nuestras consultas gratuitas implican una conversación inicial para entender tus necesidades empresariales. Luego, desarrollamos un plan estratégico adaptado y proporcionamos recomendaciones concretas para mejorar tu empresa, incluyendo la configuración de citas y el cierre de ventas si es necesario.</p>
                   </div>
                 </div>
               </div><!-- End FAQ Item -->
@@ -938,7 +938,7 @@
                   <div class="faq-icon">
                     <i class="bi bi-question-circle"></i>
                   </div>
-                  <h4>Praesent sapien massa, convallis a pellentesque nec?</h4>
+                  <h4>¿DAIA puede integrarse con las herramientas y sistemas que ya utilizamos en nuestra empresa?</h4>
                   <div class="faq-toggle">
                     <i class="bi bi-plus"></i>
                     <i class="bi bi-dash"></i>
@@ -946,7 +946,43 @@
                 </div>
                 <div class="faq-content">
                   <div class="content-inner">
-                    <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint.</p>
+                    <p>Sí, nuestras soluciones son altamente compatibles y pueden integrarse sin problemas con las herramientas y sistemas existentes de tu empresa, facilitando una transición suave.</p>
+                  </div>
+                </div>
+              </div><!-- End FAQ Item -->
+
+              <div class="faq-item">
+                <div class="faq-header">
+                  <div class="faq-icon">
+                    <i class="bi bi-question-circle"></i>
+                  </div>
+                  <h4>¿Qué seguridad ofrecen para proteger los datos de mi empresa y clientes?</h4>
+                  <div class="faq-toggle">
+                    <i class="bi bi-plus"></i>
+                    <i class="bi bi-dash"></i>
+                  </div>
+                </div>
+                <div class="faq-content">
+                  <div class="content-inner">
+                    <p>La seguridad es nuestra máxima prioridad. Implementamos tecnologías y prácticas de seguridad avanzadas para proteger los datos de tu empresa y tus clientes, cumpliendo con las normativas de seguridad más estrictas.</p>
+                  </div>
+                </div>
+              </div><!-- End FAQ Item -->
+
+              <div class="faq-item">
+                <div class="faq-header">
+                  <div class="faq-icon">
+                    <i class="bi bi-question-circle"></i>
+                  </div>
+                  <h4>¿Cómo se estructuran los costos de los servicios de DAIA, incluyendo la configuración de citas y el cierre de ventas?</h4>
+                  <div class="faq-toggle">
+                    <i class="bi bi-plus"></i>
+                    <i class="bi bi-dash"></i>
+                  </div>
+                </div>
+                <div class="faq-content">
+                  <div class="content-inner">
+                    <p>Los costos varían según las necesidades específicas de tu empresa y los servicios que elijas. Ofrecemos tarifas personalizadas y estructuras de pago flexibles. Para obtener detalles específicos, te recomendamos ponerte en contacto con nuestro equipo para una consulta personalizada y sin compromiso.</p>
                   </div>
                 </div>
               </div><!-- End FAQ Item -->
