--- a/index.html
+++ b/index.html
@@ -27,13 +27,6 @@
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Nexa
-  * Template URL: https://bootstrapmade.com/nexa-bootstrap-agency-template/
-  * Updated: Aug 19 2025 with Bootstrap v5.3.7
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body class="index-page">
@@ -861,7 +854,7 @@
 
             <div class="faq-wrapper">
 
-              <div class="faq-item faq-active">
+              <div class="faq-item">
                 <div class="faq-header">
                   <div class="faq-icon">
                     <i class="bi bi-question-circle"></i>
@@ -1166,13 +1159,13 @@
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">Nexa</strong> <span>All Rights Reserved</span></p>
+      <p>.<span></span> <strong class="px-1 sitename"></strong> <span></span></p>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
       </div>
     </div>
 
