--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <span class="description-title">Portfolio</span>
-        <h2>Portfolio</h2>
+        <h2>Proyectos</h2>
         <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
       </div><!-- End Section Title -->
 
@@ -671,18 +671,15 @@
                   <img src="assets/img/portfolio/portfolio-3.webp" class="img-fluid" alt="Brand Identity" loading="lazy">
                   <div class="overlay">
                     <div class="overlay-content">
-                      <a href="assets/img/portfolio/portfolio-3.webp" class="glightbox zoom-link" title="Brand Identity Project">
-                        <i class="bi bi-zoom-in"></i>
-                      </a>
-                      <a href="portfolio-details.html" class="details-link" title="View Project Details">
-                        <i class="bi bi-arrow-right"></i>
-                      </a>
+                     <a href="https://wa.me/549XXXXXXXXX" class="whatsapp-btn" target="_blank">
+                      Quiero mi bot!
+                    </a>
                     </div>
                   </div>
                 </div>
                 <div class="content">
-                  <h3>Brand Identity</h3>
-                  <p>Corporate branding and visual identity system</p>
+                  <h3>Chatbot de Atención al Cliente y Post Venta</h3>
+                  <p>Brindamos soluciones de chatbots que mejoran la experiencia de servicio al cliente, disponibles 24/7.</p>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
