cards section fixed

--- a/index.html
+++ b/index.html
@@ -678,35 +678,51 @@
                   </div>
                 </div>
                 <div class="content">
-                  <h3>Chatbot de Atención al Cliente y Post Venta</h3>
-                  <p>Brindamos soluciones de chatbots que mejoran la experiencia de servicio al cliente, disponibles 24/7.</p>
+                  <h3>Chatbot de Atención al Cliente</h3>
+                  <p>Brindamos soluciones de chatbots que mejoran la experiencia de servicio al cliente, disponibles 24/7. Automatizamos consultas frecuentes para reducir los tiempos de espera.</p>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-web">
+           <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <div class="portfolio-card">
                 <div class="image-container">
-                  <img src="assets/img/portfolio/portfolio-7.webp" class="img-fluid" alt="E-commerce Platform" loading="lazy">
+                  <img src="assets/img/portfolio/portfolio-3.webp" class="img-fluid" alt="Brand Identity" loading="lazy">
                   <div class="overlay">
                     <div class="overlay-content">
-                      <a href="assets/img/portfolio/portfolio-7.webp" class="glightbox zoom-link" title="E-commerce Platform">
-                        <i class="bi bi-zoom-in"></i>
-                      </a>
-                      <a href="portfolio-details.html" class="details-link" title="View Project Details">
-                        <i class="bi bi-arrow-right"></i>
-                      </a>
+                     <a href="https://wa.me/549XXXXXXXXX" class="whatsapp-btn" target="_blank">
+                      Quiero màs info!
+                    </a>
                     </div>
                   </div>
                 </div>
                 <div class="content">
-                  <h3>E-commerce Platform</h3>
-                  <p>Modern online shopping experience</p>
+                  <h3>IA Marca Personal en LinkedIn</h3>
+                  <p>Automatizar procesos, identificar nuevos clientes potenciales, incrementar sus reuniones de ventas efectivas y mejorar su tasa de conversión. OBJETIVO: ser más productivo, visible en el mercado y rentable.</p>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-print">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
+              <div class="portfolio-card">
+                <div class="image-container">
+                  <img src="assets/img/portfolio/portfolio-3.webp" class="img-fluid" alt="Brand Identity" loading="lazy">
+                  <div class="overlay">
+                    <div class="overlay-content">
+                     <a href="https://wa.me/549XXXXXXXXX" class="whatsapp-btn" target="_blank">
+                      Quiero mi bot!
+                    </a>
+                    </div>
+                  </div>
+                </div>
+                <div class="content">
+                  <h3>Chatbot con Embudo de Ventas IA</h3>
+                  <p>Convertir visitantes en clientes es todo un desafío. Por eso, en DAIA creamos chatbots de ventas alimentados por IA, diseñados para calificar leads, nutrir prospectos y cerrar más ventas, las 24 horas, los 7 días de la semana.</p>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <!--<div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-print">
               <div class="portfolio-card">
                 <div class="image-container">
                   <img src="assets/img/portfolio/portfolio-portrait-5.webp" class="img-fluid" alt="Magazine Design" loading="lazy">
