daia atom added to the main section, service section ready

--- a/index.html
+++ b/index.html
@@ -92,6 +92,37 @@
 
   <main class="main">
 
+     <!-- Orbit Section -->
+    <section id="orbit-section" class="orbit-section">
+      <div class="orbit-container">
+        <!-- Logo Central con borde -->
+        <div class="orbit-center">
+          <div class="orbit-center-circle"></div>
+          <img src="assets/img/Google-Logo-PNG.png" alt="Logo Central" class="orbit-logo">
+        </div>
+
+        <!-- Ring of Icons -->
+        <div class="orbit-ring">
+          <div class="orbit-item"><i class="bi bi-slack"></i></div>
+          <div class="orbit-item"><i class="bi bi-tiktok"></i></div>
+          <div class="orbit-item"><i class="bi bi-linkedin"></i></div>
+          <div class="orbit-item"><i class="bi bi-facebook"></i></div>
+          <div class="orbit-item"><i class="bi bi-instagram"></i></div>
+          <div class="orbit-item"><i class="bi bi-envelope"></i></div>
+          <div class="orbit-item"><i class="bi bi-calendar-event"></i></div>
+          <div class="orbit-item"><i class="bi bi-bar-chart"></i></div>
+          <div class="orbit-item"><i class="bi bi-people"></i></div>
+          <div class="orbit-item"><i class="bi bi-chat-dots"></i></div>
+          <div class="orbit-item"><i class="bi bi-github"></i></div>
+          <div class="orbit-item"><i class="bi bi-youtube"></i></div>
+          <div class="orbit-item"><i class="bi bi-telegram"></i></div>
+          <div class="orbit-item"><i class="bi bi-discord"></i></div>
+          <div class="orbit-item"><i class="bi bi-pinterest"></i></div>
+          <div class="orbit-item"><i class="bi bi-reddit"></i></div>
+        </div>
+      </div>
+    </section>
+
     <!-- Hero Section -->
     <section id="hero" class="hero section">
       <div class="hero-background">
@@ -266,16 +297,18 @@
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
               <div class="service-item">
                 <div class="service-icon">
-                  <i class="bi bi-code-slash"></i>
+                  <i class="bi bi-cash-stack"></i>
                 </div>
                 <div class="service-content">
                   <span class="service-number">01</span>
-                  <h3 class="service-title">Custom Application Development</h3>
-                  <p class="service-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla condimentum tortor sem, in semper nisl bibendum eu. Duis pellentesque.</p>
-                  <a href="#" class="service-link">
-                    Learn More
-                    <i class="bi bi-arrow-right"></i>
-                  </a>
+                  <h3 class="service-title">Reducí Costos</h3>
+                  <p class="service-text">Reduce los gastos al dejar que nuestra IA maneje tareas repetitivas, liberando tu presupuesto para inversiones más estratégicas.</p>
+                 <a href="https://wa.me/5491112345678?text=Hola!%20Quiero%20agendar%20mi%20consultoría" 
+                   target="_blank" 
+                   class="service-link">
+                  Agendá tu Consultoría
+                  <i class="bi bi-arrow-right"></i>
+                </a>
                 </div>
               </div>
             </div>
@@ -283,16 +316,18 @@
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
               <div class="service-item">
                 <div class="service-icon">
-                  <i class="bi bi-bar-chart"></i>
+                  <i class="bi bi-speedometer2"></i>
                 </div>
                 <div class="service-content">
                   <span class="service-number">02</span>
-                  <h3 class="service-title">Strategic Business Planning</h3>
-                  <p class="service-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla condimentum tortor sem, in semper nisl bibendum eu. Duis pellentesque.</p>
-                  <a href="#" class="service-link">
-                    Learn More
-                    <i class="bi bi-arrow-right"></i>
-                  </a>
+                  <h3 class="service-title">Ganá Velocidad</h3>
+                  <p class="service-text">Hacé tus procesos hasta 5 veces más rápidos y optimiza la eficiencia con nuestra ayuda.</p>
+                 <a href="https://wa.me/5491112345678?text=Hola!%20Quiero%20agendar%20mi%20consultoría" 
+                   target="_blank" 
+                   class="service-link">
+                  Agendá tu Consultoría
+                  <i class="bi bi-arrow-right"></i>
+                </a>
                 </div>
               </div>
             </div>
@@ -300,16 +335,18 @@
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
               <div class="service-item">
                 <div class="service-icon">
-                  <i class="bi bi-palette"></i>
+                  <i class="bi bi-gear-wide-connected"></i>
                 </div>
                 <div class="service-content">
                   <span class="service-number">03</span>
-                  <h3 class="service-title">Brand &amp; Identity Design</h3>
-                  <p class="service-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla condimentum tortor sem, in semper nisl bibendum eu. Duis pellentesque.</p>
-                  <a href="#" class="service-link">
-                    Learn More
-                    <i class="bi bi-arrow-right"></i>
-                  </a>
+                  <h3 class="service-title">Optimizá la Eficiencia</h3>
+                  <p class="service-text">Proporciona a tu equipo las herramientas para aumentar su productividad y lograr más, gracias a nuestra tecnología.</p>
+                 <a href="https://wa.me/5491112345678?text=Hola!%20Quiero%20agendar%20mi%20consultoría" 
+                   target="_blank" 
+                   class="service-link">
+                  Agendá tu Consultoría
+                  <i class="bi bi-arrow-right"></i>
+                </a>
                 </div>
               </div>
             </div>
@@ -317,16 +354,18 @@
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
               <div class="service-item">
                 <div class="service-icon">
-                  <i class="bi bi-megaphone"></i>
+                  <i class="bi bi-stars"></i>
                 </div>
                 <div class="service-content">
                   <span class="service-number">04</span>
-                  <h3 class="service-title">Digital Marketing &amp; SEO</h3>
-                  <p class="service-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla condimentum tortor sem, in semper nisl bibendum eu. Duis pellentesque.</p>
-                  <a href="#" class="service-link">
-                    Learn More
-                    <i class="bi bi-arrow-right"></i>
-                  </a>
+                  <h3 class="service-title">Mejora la Calidad</h3>
+                  <p class="service-text">Obtené una producción consistente y de calidad al eliminar errores y asegurar resultados precisos y confiables.</p>
+                  <a href="https://wa.me/5491112345678?text=Hola!%20Quiero%20agendar%20mi%20consultoría" 
+                   target="_blank" 
+                   class="service-link">
+                  Agendá tu Consultoría
+                  <i class="bi bi-arrow-right"></i>
+                </a>
                 </div>
               </div>
             </div>
