new logo added to header

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@ document.addEventListener("DOMContentLoaded", function () {
 
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/Daia.png" alt="">
-        <h1 class="sitename">DAIA</h1>
+        <img src="assets/img/LogoConNombre.png" alt="">
+        <!-- <h1 class="sitename">DAIA</h1> -->
       </a>
 
       <nav id="navmenu" class="navmenu">
